Refactor files